test(storyfilehandling): update path logic to fix pipeline